<resources>
    <string name="app_name">Spot</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="map">Map</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_change_username">ChangeUsernameActivity</string>
    <string name="wait_spinner">"password changed successfully "</string>
    <string name="resetPassword">Change Password</string>
    <string name="currentPass">current password</string>
    <string name="enterCurrentPass">enter current Password</string>
    <string name="newPass">new password</string>
    <string name="enterNewPass">enter new password</string>
    <string name="reNewPass">reenter new password</string>
    <string name="enterReNewPass">reenter new passowrd</string>
    <string name="cancel">cancle</string>
    <string name="save">save</string>
    <string name="currentUserName">current user name</string>
    <string name="changeUserName">change user name</string>
    <string name="resetUserName">Change user name</string>
    <string name="newUserName">enter new user name</string>
    <string name="login">Log in</string>
    <string name="username">User name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="dont">You do not have an account?</string>
    <string name="dodo">Already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="loginsubtitle">Log in to track your friends!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page2">homePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="invite">Invite</string>
    <string name="channel_name">Spot</string>
    <string name="channel_description">Spot</string>

</resources>