<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/waiting_card"
            android:visibility="gone"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:gravity="center"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="201dp"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:id="@+id/processTextIaIndicator"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/wait_spinner" />

                <Space
                    android:layout_width="21dp"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    />

                <ImageView
                    android:id="@+id/tick"
                    android:layout_width="48dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:background="@drawable/tick" />

                <ImageView
                    android:id="@+id/cross"
                    android:layout_width="48dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:background="@drawable/cross" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="37dp" />

    <TextView
        android:id="@+id/resetPasswordLabel"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resetPassword"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:gravity=""
        android:text="@string/currentPass"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <EditText
        style="@style/input"
        android:id="@+id/currentPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        android:textFontWeight="0"
        android:textColor="@color/white"
        android:hint="@string/enterCurrentPass"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:gravity="start" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="215dp"
        android:layout_height="wrap_content"

        android:text="@string/newPass"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        style="@style/input"
        android:id="@+id/newPass1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textFontWeight="0"
        android:hint="@string/enterNewPass"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="215dp"
        android:layout_height="wrap_content"

        android:text="@string/reNewPass"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        style="@style/input"
        android:id="@+id/newPass2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textFontWeight="0"
        android:hint="@string/enterReNewPass"
        android:inputType="textPassword" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/litepurplebutton"
            android:id="@+id/cancelPassButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/changePassButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/darkpurplebutten"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/purple_200" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="38dp" />


</LinearLayout>