<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1616"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/resetPasswordLabel"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resetUserName"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="new user Name:"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newUsername"
        style="@style/input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/newUserName"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textColorHint="@color/white"
        android:textFontWeight="0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/currentUserName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordLabel" />

    <TextView
        android:id="@+id/Username"
        style="@style/input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/greyborder"
        android:ems="10"
        android:gravity="start"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textColorHint="@color/white"
        android:textFontWeight="0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        />


    <Button
        android:id="@+id/cancelUserNameButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/litepurplebutton"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUsername" />

    <Button
        android:id="@+id/changeUsernameButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_weight="1"
        android:background="@drawable/darkpurplebutten"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toEndOf="@+id/cancelPassButton"
        app:layout_constraintTop_toBottomOf="@+id/newUsername" />


</androidx.constraintlayout.widget.ConstraintLayout>